--- a/dev/helm/templates/deployment.yaml
+++ b/dev/helm/templates/deployment.yaml
@@ -29,7 +29,7 @@ spec:
         - name: {{ .Chart.Name }}-sideload
           securityContext:
             {{- toYaml .Values.sideload.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ default "latest" .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ default "2" .Values.image.tag }}"
           imagePullPolicy: {{ default "IfNotPresent" .Values.image.imagePullPolicy }}
           env:
             {{- toYaml .Values.sideload.env | nindent 12 }}
@@ -42,7 +42,7 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ default "latest" .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ default "2" .Values.image.tag }}"
           imagePullPolicy: {{ default "IfNotPresent" .Values.image.imagePullPolicy }}
           env:
             {{- if .Values.nodeExtraCaCerts }}
@@ -56,15 +56,22 @@ spec:
               value: {{ .Values.externalPostgresql.databaseURL }}
             - name: NODE_TLS_REJECT_UNAUTHORIZED
               value: {{ default "1" .Values.externalPostgresql.NODE_TLS_REJECT_UNAUTHORIZED | quote }}
-            {{- else }}
+            {{- else if .Values.postgresql.enabled }}
             - name: DB_HOST
               value: {{ template "wiki.postgresql.host" . }}
             - name: DB_PORT
               value: "{{ default "5432" .Values.postgresql.postgresqlPort }}"
             - name: DB_NAME
-              value: {{ default "wiki" .Values.postgresql.postgresqlDatabase }}
+              value: {{ default "wiki" .Values.postgresql.postgresqlDatabase | quote }}
             - name: DB_USER
-              value: {{ default "wiki" .Values.postgresql.postgresqlUser }}
+            {{- if .Values.postgresql.existingSecret }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.postgresql.existingSecret }}
+                  key: {{ template "wiki.postgresql.secretUserKey" . }}
+            {{- else }}
+              value: {{ default "postgres" .Values.postgresql.postgresqlUser }}
+            {{- end }}
             - name: DB_SSL
               value: "{{ default "false" .Values.postgresql.ssl }}"
             - name: DB_SSL_CA
@@ -72,12 +79,27 @@ spec:
             - name: DB_PASS
               valueFrom:
                 secretKeyRef:
-                {{- if .Values.postgresql.existingSecret }}
-                  name: {{ .Values.postgresql.existingSecret }}
-                {{- else }}
                   name: {{ template "wiki.postgresql.secret" . }}
-                {{- end }}
                   key: {{ template "wiki.postgresql.secretKey" . }}
+            {{- else if .Values.externalPostgresql }}
+            # External PostgreSQL configuration
+            - name: DB_HOST
+              value: {{ required "External PostgreSQL host is required when postgresql.enabled is false" .Values.externalPostgresql.host | quote }}
+            - name: DB_PORT
+              value: {{ required "External PostgreSQL port is required when postgresql.enabled is false" .Values.externalPostgresql.port | quote }}
+            - name: DB_NAME
+              value: {{ required "External PostgreSQL database name is required when postgresql.enabled is false" .Values.externalPostgresql.database | quote }}
+            - name: DB_USER
+              value: {{ required "External PostgreSQL user is required when postgresql.enabled is false" .Values.externalPostgresql.username | quote }}
+            - name: DB_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: {{ required "External PostgreSQL secret name is required when postgresql.enabled is false" .Values.externalPostgresql.existingSecret | quote }}
+                  key: {{ required "External PostgreSQL secret key is required when postgresql.enabled is false" .Values.externalPostgresql.existingSecretKey | quote }}
+            - name: DB_SSL
+              value: "{{ default "false" .Values.externalPostgresql.ssl }}"
+            - name: DB_SSL_CA
+              value: "{{ default "" .Values.externalPostgresql.ca }}"
             {{- end }}
             - name: HA_ACTIVE
               value: {{ .Values.replicaCount | int | le 2 | quote }}
